// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Carousel /> by default on desktop matches with snapshot 1`] = `
<div
  className="sc-AxmLO fGuvvD"
>
  <div
    className="sc-AxgMl jWGKu"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="sc-AxheI fsZQch"
      onClick={[Function]}
    >
      <div
        className="sc-AxhCb ffaSdK"
      >
        <div
          className="sc-AxhUy hZqsUu"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="sc-fzqBZW czosQr k-ProjectCard__grid--flex"
              >
                <span
                  className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
                  tabIndex={null}
                >
                  <img
                    alt=""
                    className="k-ButtonImage__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="sc-fzqBZW gxqxTd k-ProjectCard__grid--flex"
              >
                <p
                  className="sc-fzqNJr cMUvav k-ProjectCard__grid--flex__item-fluid k-Card__title"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-AxhUy ezsiGz"
        />
        <div
          className="sc-AxhUy ezsiGz"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Carousel /> by default on mobile matches with snapshot 1`] = `
<div
  className="sc-AxmLO fGuvvD"
>
  <div
    className="sc-AxgMl jWGKu"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="sc-AxheI fsZQch custom-class"
      onClick={[Function]}
    >
      <div
        className="sc-AxhCb ffaSdK"
      >
        <div
          className="sc-AxhUy hZqsUu"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="sc-fzqBZW czosQr k-ProjectCard__grid--flex"
              >
                <span
                  className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
                  tabIndex={null}
                >
                  <img
                    alt=""
                    className="k-ButtonImage__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="sc-fzqBZW gxqxTd k-ProjectCard__grid--flex"
              >
                <p
                  className="sc-fzqNJr cMUvav k-ProjectCard__grid--flex__item-fluid k-Card__title"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-AxhUy iLqwOC"
        />
        <div
          className="sc-AxhUy iLqwOC"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Carousel /> with loop prop on desktop matches with snapshot 1`] = `
<div
  className="sc-AxmLO fGuvvD"
>
  <div
    className="sc-AxgMl jWGKu"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="sc-AxheI fsZQch"
      onClick={[Function]}
    >
      <div
        className="sc-AxhCb ffaSdK"
      >
        <div
          className="sc-AxhUy hZqsUu"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="sc-fzqBZW czosQr k-ProjectCard__grid--flex"
              >
                <span
                  className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
                  tabIndex={null}
                >
                  <img
                    alt=""
                    className="k-ButtonImage__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="sc-fzqBZW gxqxTd k-ProjectCard__grid--flex"
              >
                <p
                  className="sc-fzqNJr cMUvav k-ProjectCard__grid--flex__item-fluid k-Card__title"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-AxhUy ezsiGz"
        />
        <div
          className="sc-AxhUy ezsiGz"
        />
      </div>
    </div>
  </div>
</div>
`;
